# PointsVisualization

./: CMakeLists.txt  PointToSphere.cpp  PointToSphere.h  README.md  example.csv  main.cpp  test.cpp  widget.h
docs/html/: _point_to_sphere_8h_source.html  annotated.html  class_point_to_sphere-members.html  class_point_to_sphere.html  classdoctest_1_1_assert_data_1_1_string_contains-members.html  classdoctest_1_1_assert_data_1_1_string_contains.html  classdoctest_1_1_contains-members.html  classdoctest_1_1_contains.html  classdoctest_1_1_contains__coll__graph.map  classdoctest_1_1_contains__coll__graph.md5  classdoctest_1_1_context-members.html  classdoctest_1_1_context.html  classdoctest_1_1_string-members.html  classdoctest_1_1_string.html  classdoctest_1_1detail_1_1_context_scope-members.html  classdoctest_1_1detail_1_1_context_scope.html  classdoctest_1_1detail_1_1_context_scope__coll__graph.md5  classdoctest_1_1detail_1_1_context_scope__inherit__graph.map  classdoctest_1_1detail_1_1_exception_translator-members.html  classdoctest_1_1detail_1_1_exception_translator.html  classdoctest_1_1detail_1_1_exception_translator__inherit__graph.md5  classes.html  classstd_1_1basic__istream.html  classstd_1_1basic__ostream.html  classstd_1_1tuple.html  doctest_8h_source.html  files.html  functions.html  functions_func.html  graph_legend.html  hierarchy.html  index.html  inherit_graph_0.map  inherit_graph_0.md5  inherit_graph_1.map  inherit_graph_10.map  inherit_graph_10.md5  inherit_graph_12.map  inherit_graph_12.md5  inherit_graph_13.map  (+202 more)
docs/latex/: annotated.tex  files.tex  (+67 more)
(+10 files in other folders)
